--- a/application/views/scripts/dossier/results/avisderogation/dossier.phtml
+++ b/application/views/scripts/dossier/results/avisderogation/dossier.phtml
@@ -1,10 +1,10 @@
 <?php foreach ($this->DOSSIERS_ETAB as $dossier): ?>
-    <div class="radio-controls avis-derogation__leve">
-        <label class="radio" for="ID_DOSSIER_<?= $dossier['ID_DOSSIER'] ?>">
+    <li class="radio">
+        <label>
             <input
+                id="ID_DOSSIER_<?= $dossier['ID_DOSSIER'] ?>"
                 type="radio"
                 name="ID_DOSSIER_LIE"
-                id="ID_DOSSIER_<?= $dossier['ID_DOSSIER'] ?>"
                 value=<?= $dossier['ID_DOSSIER'] ?>
                 <?= $dossier['ID_DOSSIER'] === $this->ID_DOSSIER_LIE ? 'checked' : '' ?>
             >
@@ -12,5 +12,5 @@
                 <?= $dossier['OBJET_DOSSIER'] ?? $dossier['ID_DOSSIER'] ?>
             </a>
         </label>
-    </div>
+    </li>
 <?php endforeach ?>
