--- a/application/layouts/dossier.phtml
+++ b/application/layouts/dossier.phtml
@@ -345,7 +345,7 @@ endif ?>
 
 <!-- Modal -->
 <div class="modal fade" tabindex="-1" id="modal-desc" role="dialog">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Fermer"><span aria-hidden="true">&times;</span></button>
