--- a/application/views/scripts/dossier/descriptif.phtml
+++ b/application/views/scripts/dossier/descriptif.phtml
@@ -1,42 +1,41 @@
 <div id='dossierInfos'>
+    <h3 class='pull-left'>
+        Descriptif
+        <?php
+            if(isset($this->natureConcerne[0]['ID_NATURE']) && $this->natureConcerne[0]['ID_NATURE'] != 19) {
+                echo "des travaux";
+            }
+        ?>
+    </h3>
 
-<h3 float='left' >
-    Descriptif
-    <?php
-        if(isset($this->natureConcerne[0]['ID_NATURE']) && $this->natureConcerne[0]['ID_NATURE'] != 19) {
-            echo "des travaux";
-        }
-     ?>
-</h3>
+    <!-- Boutons -->
+    <div class='pull-right'>
+        <?php
+        $action = $this->do;
+        echo "
+            <div id='boutons' style='float: right'>
+                <button id='modificationDossier' class='btn btn-default' style='".( ($action == 'new' || $this->infosDossier['VERROU_DOSSIER'] == 1)? "display:none;" : "" )."'><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;Modifier</button>
+                <button id='annulModification' class='btn btn-default' style='".( ($action == 'new' || $action == 'edit')? "display:none;" : "" )." z-index:150;'>Annuler</button>
+                <button id='validModification' class='save btn btn-success' style='".( ($action == 'new' || $action == 'edit')? "display:none;" : "" )." z-index:150;'><span class='glyphicon glyphicon-ok' aria-hidden='true'></span>&nbsp;Sauvegarder</button>
+                <div id='chargement'></div>
+        </div>"
+        ?>
+    </div>
 
-<!-- Boutons -->
-<div float='right' >
-    <?php    
-    $action = $this->do;
-    echo "  
-        <div id='boutons' style='float: right'>
-            <button id='modificationDossier' class='btn btn-default' style='".( ($action == 'new' || $this->infosDossier['VERROU_DOSSIER'] == 1)? "display:none;" : "" )."'><span class='glyphicon glyphicon-pencil' aria-hidden='true'></span>&nbsp;Modifier</button>
-            <button id='annulModification' class='btn btn-default' style='".( ($action == 'new' || $action == 'edit')? "display:none;" : "" )." z-index:150;'>Annuler</button>
-            <button id='validModification' class='save btn btn-success' style='".( ($action == 'new' || $action == 'edit')? "display:none;" : "" )." z-index:150;'><span class='glyphicon glyphicon-ok' aria-hidden='true'></span>&nbsp;Sauvegarder</button>
-            <div id='chargement'></div>
-    </div>"
-    ?>
-</div>
-
-<br class='clear' />
+    <div class='clearfix'></div>
     <div class="lecture">
         <p><?php echo empty($this->infosDossier['DESCRIPTIF_DOSSIER']) ? "Aucun descriptif disponible pour ce dossier." : nl2br($this->infosDossier['DESCRIPTIF_DOSSIER']) ?></p>
     </div>
 
     <form class="edit" id="descriptif" action="" method="POST" >
-            <textarea name='DESCRIPTIF_DOSSIER' id='descriptif_general' cols='' rows='' style='width: 100%; height: 500px;' ><?php echo $this->infosDossier['DESCRIPTIF_DOSSIER'] ?></textarea>
+        <textarea class='form-control' name='DESCRIPTIF_DOSSIER' id='descriptif_general' style='height: 500px;'><?php echo $this->infosDossier['DESCRIPTIF_DOSSIER'] ?></textarea>
     </form>
 </div>
 
 <script type="text/javascript">
     $(document).ready(function(){
 	$("#descriptif_general").elastic();
-	
+
 	$("#modificationDossier").button().click(function() {
         $(".lecture").hide();
         $("#modificationDossier").hide();
@@ -44,15 +43,15 @@
         $("#annulModification").show();
         $("#validModification").show();
 	});
-	
+
 	$("#annulModification").button().click(function() {
 		window.location.reload();
 	});
-	
+
 	$("#validModification").button().click(function() {
 		$("#descriptif").submit();
 	});
-	
+
 	$(".edit").hide();
     });
 </script>
