--- a/application/views/scripts/dossier/results/avisderogation/liste-dossier.phtml
+++ b/application/views/scripts/dossier/results/avisderogation/liste-dossier.phtml
@@ -1,21 +1,11 @@
-<button
-    id="deselect"
-    type="button"
-    class="btn btn-info <?php if (null === $this->ID_DOSSIER_LIE) echo 'hide' ?>"
->
-    Désélectionner
-</button>
-
 <?php foreach ($this->listeDossierParType as $type => $dossiers): ?>
-    <div>
-        <p>
+    <div class="col-md-4">
+        <ul id='avis-derogations-leves' class='list-unstyled'>
             <?= $type ?>
             <?php if ([] === $dossiers): ?>
                 : <strong>Aucun dossier de ce type disponible</strong>
             <?php endif ?>
-        </p>
 
-        <div>
             <?=
                 $this->partial(
                     'dossier/results/avisderogation/dossier.phtml',
@@ -25,20 +15,23 @@
                     ]
                 );
             ?>
-        </div>
+
+            <?php if (count($this->listeDossierParTypeN[$type]) > 0): ?>
+                <div id="<?= 'dossTypeN'.$type ?>">
+                    <?=
+                        $this->partial(
+                            'dossier/results/avisderogation/dossier.phtml',
+                            [
+                                'DOSSIERS_ETAB' => $this->listeDossierParTypeN[$type],
+                                'ID_DOSSIER_LIE' => $this->ID_DOSSIER_LIE ?? null
+                            ]
+                        );
+                    ?>
+                </div>
+            <?php endif ?>
+        </ul>
 
         <?php if (count($this->listeDossierParTypeN[$type]) > 0): ?>
-            <div id="<?= 'dossTypeN'.$type ?>" class='hide'>
-                <?=
-                    $this->partial(
-                        'dossier/results/avisderogation/dossier.phtml',
-                        [
-                            'DOSSIERS_ETAB' => $this->listeDossierParTypeN[$type],
-                            'ID_DOSSIER_LIE' => $this->ID_DOSSIER_LIE ?? null
-                        ]
-                    );
-                ?>
-            </div>
             <button class='btn btn-default buttonOpenClose' type='button' type-dossier="<?= 'dossTypeN'.$type ?>">
                 Voir plus
             </button>
