--- a/application/views/scripts/dossier/textes-applicables.phtml
+++ b/application/views/scripts/dossier/textes-applicables.phtml
@@ -5,25 +5,23 @@
 <h3>Textes applicables</h3>
 
 <?php if(count($this->textes_applicables_dossier) == 0) : ?>
-
     <div class='well well-large text-center'>
         <p class='lead'>Il n'y a pas de texte applicable.</p>
         <p><a href='<?php echo $this->url(array('action' => 'edit-textes-applicables')) ?>' class='btn btn-default btn-lg'>Gérer les textes applicables</a></p>
     </div>
-
 <?php else : ?>
-
-<div class='row'>
-    <?php foreach($this->textes_applicables_dossier as $titre => $textes_applicables) : ?>
-        <h4><?php echo $titre ?></h4>
-        <ul class='list-unstyled'>
-            <?php foreach($textes_applicables as $texte_applicable) : ?>
-                <li>
-                    ✓ <?php echo $texte_applicable['LIBELLE_TEXTESAPPL'] ?>
-                </li>
+    <div class='row'>
+        <div class="col-md-12">
+            <?php foreach($this->textes_applicables_dossier as $titre => $textes_applicables) : ?>
+                <h4><?php echo $titre ?></h4>
+                <ul class='list-unstyled'>
+                    <?php foreach($textes_applicables as $texte_applicable) : ?>
+                        <li>
+                            ✓ <?php echo $texte_applicable['LIBELLE_TEXTESAPPL'] ?>
+                        </li>
+                    <?php endforeach ?>
+                </ul>
             <?php endforeach ?>
-        </ul>
-    <?php endforeach ?>
-</div>
-
+        </div>
+    </div>
 <?php endif ?>
