Meilleur affichage de la navigation

--- a/application/layouts/includes/nav-main.phtml
+++ b/application/layouts/includes/nav-main.phtml
@@ -50,7 +50,7 @@
                                 <button class="btn btn-default" type="submit">
                                     <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                                 </button>
-                                <a class="btn btn-link btn-sm" href="/search/etablissement?&statuts%5B%5D=2&statuts%5B%5D=4">Avancée &raquo;</a>
+                                <a class="btn btn-default" href="/search/etablissement?&statuts%5B%5D=2&statuts%5B%5D=4">Avancée &raquo;</a>
                             </div>
                         </div>
                         <input name="page" type="hidden" value="1" />
