--- a/public/css/main.css
+++ b/public/css/main.css
@@ -90,6 +90,9 @@ body > .navbar {
     font-size: 12px;
 }
 
+.navbar-fixed-top .navbar-right {
+    margin-right: 0;
+}
 .navbar-right {
     margin-top: 10px;
 }
