--- a/application/layouts/error.phtml
+++ b/application/layouts/error.phtml
@@ -1,5 +1,6 @@
-<!doctype html>
-<html lang="fr" >
+<!DOCTYPE html>
+
+<html lang="fr">
     <head>
         <?php include(APPLICATION_PATH . DS . 'layouts' . DS . 'includes' . DS . 'header.phtml'); ?>
     </head>
