--- a/application/layouts/login.phtml
+++ b/application/layouts/login.phtml
@@ -1,5 +1,6 @@
-<!doctype html>
-<html lang="fr" >
+<!DOCTYPE html>
+
+<html lang="fr">
     <head>
         <?php echo $this->render("includes/header.phtml"); ?>
     </head>
@@ -10,12 +11,12 @@
                 <h1 class='text-center'>
                     <img src='/images/logo_prevarisc_big.jpg' alt='Prevarisc' />
                 </h1>
-            
+
                 <div class='well'>
                     <?php echo $this->render("includes/notifications.phtml"); ?>
-                    <?php echo $this->layout()->content; ?>  
+                    <?php echo $this->layout()->content; ?>
                 </div>
-                
+
                 <?php echo $this->render("includes/footer.phtml"); ?>
             </div>
         </div>
