--- a/application/layouts/index.phtml
+++ b/application/layouts/index.phtml
@@ -1,5 +1,6 @@
-<!doctype html>
-<html lang="fr" >
+<!DOCTYPE html>
+
+<html lang="fr">
     <head>
         <style>body { padding-top: 80px; }</style>
         <?php echo $this->render("includes/header.phtml"); ?>
