--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1283,7 +1283,7 @@ dl.champ_effectif_camping dd input {
     gap: 1rem;
 }
 
-.justification-levee {
+.icon-label-right {
     margin-left: .5rem;
     cursor: pointer;
 }
