--- a/application/views/scripts/dossier/avis-et-derogations.phtml
+++ b/application/views/scripts/dossier/avis-et-derogations.phtml
@@ -1,4 +1,4 @@
-<form class="form-horizontal col-md-12" method="post">
+<form class="form-horizontal col-md-offset-2 col-md-8" method="post">
     <input type='hidden' name='ID_DOSSIER' value='<?= $this->idDossier ?>' />
     <input class="btn btn-success pull-right" type='submit' value='Ajouter l&apos;avis'/>
     <div class="clearfix"></div>
@@ -91,7 +91,56 @@
         </div>
     </div>
 
-    <input class="btn btn-success pull-right" type='submit' value='Ajouter l&apos;avis'/>
+    <div class="form-group">
+        <input class="btn btn-success pull-right" type='submit' value='Ajouter l&apos;avis'/>
+    </div>
 </form>
 
-<?= $this->partialLoop("dossier/results/avis-et-derogations.phtml", $this->arrayAvisDerogations); ?>
+<div class="col-md-12">
+    <?= $this->partialLoop("dossier/results/avis-et-derogations.phtml", $this->arrayAvisDerogations); ?>
+</div>
+
+<div class="modal fade" id="modal-delete-avis-derogation" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Fermer">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h3 class="modal-title">Supprimer un avis ou une dérogation</h3>
+            </div>
+            <div class="modal-body">
+                Vous êtes sur le point de supprimer l'avis ou la dérogation <strong><span id="name-avis-derogation"></span></strong>.
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+                <button id="delete-avis-derogation" type="button" class="btn btn-danger">Supprimer</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+    $('.delete-avis-derogation').on('click', function(e) {
+        e.preventDefault()
+
+        const card_avis_derogations = $(this).closest('.cardAvisDerogations')
+        const id = card_avis_derogations.attr('data-id')
+        const title = card_avis_derogations.find('h3 span')[0].innerText
+
+        $('#name-avis-derogation').html(title)
+        $('#delete-avis-derogation').click(function() {
+            $.ajax({
+                url: "/dossier/avis-et-derogations-delete/id/" + id,
+                type: "delete",
+                success: function() {
+                    card_avis_derogations.remove()
+                    $("#modal-delete-avis-derogation").modal('hide')
+                },
+                error: function() {
+                    return false
+                }
+            })
+        })
+    })
+</script>
