modification de nom des onglets

--- a/application/layouts/dossier.phtml
+++ b/application/layouts/dossier.phtml
@@ -1,5 +1,9 @@
 <?php if ($this->action != "add" && $this->do != "new") : ?>
     <?php $this->placeholder('lateral_navigation')->captureStart(); // Capture du 'lateral_navigation'?>
+    <?php
+    $db = Zend_Db_Table::getDefaultAdapter();
+    $VerificationsTechniques = $db->fetchOne('SELECT NOM FROM capsulerubrique WHERE NOM_INTERNE = ?', 'descriptifVerificationsTechniques');
+    $effectifsDegagements = $db->fetchOne('SELECT NOM FROM capsulerubrique WHERE NOM_INTERNE = ?', 'effectifsDegagementsDossier');?>
 
     <input type='hidden' name='ID_CREATEUR' id='ID_CREATEUR' value='<?= $this->idUser; ?>' />
 
@@ -42,7 +46,7 @@
             <li class="<?= strpos($this->action, 'verifications-techniques') !== false ? 'active' : '' ?>">
                 <a href= <?= $this->url(array("controller" => "dossier", "action" => "verifications-techniques", "id" => $this->idDossier), false, true) ?>>
                     <i class="icon-th-list icon-black"></i>
-                    Vérifications techniques
+                    <?= $VerificationsTechniques ?>
                 </a>
             </li>
         <?php endif ?>
@@ -51,7 +55,7 @@
             <li class="<?= strpos($this->action, 'effectifs-degagements-dossier') !== false ? 'active' : '' ?>">
                 <a class='sep' href='<?= $this->url(array('action' => 'effectifs-degagements-dossier')) ?>' >
                     <i class="icon-th-list icon-black"></i>
-                    Effectifs et dégagements
+                    <?=  $effectifsDegagements ?>
                 </a>
             </li>
         <?php endif ?>
