--- a/application/views/scripts/formulaire/index.phtml
+++ b/application/views/scripts/formulaire/index.phtml
@@ -1,84 +1,94 @@
 <?php
-    $arrayKeys = array_keys($this->formulaires);
-    $lastKey = end($arrayKeys);
+$arrayKeys = array_keys($this->formulaires);
+$lastKey = end($arrayKeys);
 ?>
-<?php foreach($this->formulaires as $key => $formulaire) : ?>
-    <div id="<?= $formulaire['NOM_INTERNE'] ?>" class="row-fluid objet">
-        <div class="span12">
-            <h2>
-                <?= $formulaire['NOM'] ?>
-            </h2>
+<ul class="nav nav-tabs">
+    <li class="active"><a href="#etablissements" data-toggle="tab">Etablissements</a></li>
+    <li><a href="#dossiers" data-toggle="tab">Dossiers</a></li>
+</ul>
 
-            <div class="row-fluid titles">
-                <div class="span4">
-                    <h3>Informations sur la rubrique</h3>
-                </div>
-
-                <?php if(count($formulaire['RUBRIQUES']) > 0): ?>
-                    <div class="span6 offset2">
-                        <h3>Liste des rubriques</h3>
+<div class="tab-content">
+    <div class="tab-pane active" id="etablissements">
+        <?php foreach ($this->formulaires as $key => $formulaire) : ?>
+            <?php if ($formulaire['NOM_INTERNE'] == 'effectifsDegagementsEtablissement' || $formulaire['NOM_INTERNE'] == 'descriptifEtablissement') : ?>
+                <div id="<?= $formulaire['NOM_INTERNE'] ?>" class="row-fluid objet">
+                    <div class="span12">
+                        <div>
+                            <h2 style="display: inline;" id="nom_<?= $formulaire['ID_CAPSULERUBRIQUE'] ?>">
+                                <?= $formulaire['NOM'] ?>
+                            </h2>
+                            <a data-toggle="modal" data-target="#editModal_<?= $formulaire['ID_CAPSULERUBRIQUE'] ?>">
+                                <i title='Modifier' class="icon-pencil icon-black" style="margin-left: 10px;"></i>
+                            </a>
+                        </div>
+                        <?php include 'partials/partial-modal-editNom-capsuleRubrique.phtml'; ?>
+                        <?php include 'partials/partial-infos-rubriques.phtml'; ?>
                     </div>
-                <?php endif ?>
-            </div>
-
-            <div class="row-fluid">
-                <div id="<?= $formulaire['NOM_INTERNE'] ?>" class="span4 infos-rubrique">
-                    <form action class="form-inline" method="post">
-                        <div>
-                            <?= $this->form->nom_rubrique->setAttrib('id', sprintf('%s-nom_rubrique', $formulaire['NOM_INTERNE'])) ?>
-                        </div>
-                        <div>
-                            <?= $this->form->afficher_rubrique->setAttrib('id', sprintf('%s-afficher_rubrique', $formulaire['NOM_INTERNE'])) ?>
-                        </div>
-
-                        <?= $this->form->save ?>
-                    </form>
+                    <?php if ($key !== $lastKey) : ?>
+                        <hr>
+                    <?php endif; ?>
                 </div>
-
-                <div class="span6 offset2 saved-rubriques">
-                    <?php if(count($formulaire['RUBRIQUES']) > 0): ?>
-                        <table class="table table-bordered table-condensed">
-                            <thead>
-                                <tr>
-                                    <th></th>
-                                    <th>Nom de la rubrique</th>
-                                    <th>Afficher la rubrique par défaut</th>
-                                    <th></th>
-                                </tr>
-                            </thead>
-                            <tbody id="capsule-rubrique-<?= $formulaire['ID_CAPSULERUBRIQUE']?>" class="grp">
-                                <?php foreach($formulaire['RUBRIQUES'] as $rubrique): ?>
-                                    <tr id=<?=$rubrique['ID_RUBRIQUE']?>>
-                                        <td class='tdMove'><i class="icon-move"></i></td>
-                                        <td><?= $rubrique['NOM'] ?></td>
-                                        <td id='default-display'>
-                                            <?php if($rubrique['DISPLAY']): ?>
-                                                <div class="text-center">
-                                                    <i class="icon-ok"></i>
-                                                </div>
-                                            <?php endif ?>
-                                        </td>
-                                        <td id='actions'>
-                                            <div class='text-center'>
-                                                <a href="<?= $this->url(['controller' => 'formulaire', 'action' => 'edit-rubrique', 'rubrique' => $rubrique['ID_RUBRIQUE']], null, true) ?>">
-                                                    <i title='Modifier' class='icon-pencil'></i>
-                                                </a>
-                                                <button data-id="<?= $rubrique['ID_RUBRIQUE'] ?>" data-nom="<?= $rubrique['NOM'] ?>" class="btn btn-link delete-rubrique">
-                                                    <i title='Supprimer' class='icon-trash'></i>
-                                                </button>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                <?php endforeach ?>
-                            </tbody>
-                        </table>
-                    <?php endif ?>
-                </div>
-            </div>
-        </div>
+            <?php endif; ?>
+        <?php endforeach; ?>
     </div>
 
-    <?php if($key !== $lastKey): ?>
-        <hr>
-    <?php endif;
-endforeach ?>
+    <div class="tab-pane" id="dossiers">
+        <?php foreach ($this->formulaires as $key => $formulaire) : ?>
+            <?php if ($formulaire['NOM_INTERNE'] != 'effectifsDegagementsEtablissement' && $formulaire['NOM_INTERNE'] != 'descriptifEtablissement') : ?>
+                <div id="<?= $formulaire['NOM_INTERNE'] ?>" class="row-fluid objet">
+                    <div class="span12">
+                        <div>
+                            <h2 style="display: inline;" id="nom_<?= $formulaire['ID_CAPSULERUBRIQUE'] ?>">
+                                <?= $formulaire['NOM'] ?>
+                            </h2>
+                            <a data-toggle="modal" data-target="#editModal_<?= $formulaire['ID_CAPSULERUBRIQUE'] ?>">
+                                <i title='Modifier' class="icon-pencil icon-black" style="margin-left: 10px;"></i>
+                            </a>
+                        </div>
+                        <?php include 'partials/partial-modal-editNom-capsuleRubrique.phtml'; ?>
+                        <?php include 'partials/partial-infos-rubriques.phtml'; ?>
+                    </div>
+                    <?php if ($key !== $lastKey) : ?>
+                        <hr>
+                    <?php endif; ?>
+                </div>
+            <?php endif; ?>
+        <?php endforeach; ?>
+    </div>
+</div>
+
+<script>
+    $(document).ready(function() {
+        <?php foreach ($this->formulaires as $formulaire) : ?>
+            $('#editForm_<?= $formulaire['ID_CAPSULERUBRIQUE'] ?>').on('submit', function(e) {
+                e.preventDefault();
+                var newName = $('#newName_<?= $formulaire['ID_CAPSULERUBRIQUE'] ?>').val();
+                if (newName) {
+                    $.ajax({
+                        url: '<?= $this->url(['controller' => 'formulaire', 'action' => 'edit-nom'], null, true) ?>',
+                        type: 'POST',
+                        data: {
+                            id: <?= $formulaire['ID_CAPSULERUBRIQUE'] ?>,
+                            newName: newName
+                        },
+                        dataType: 'json',
+                        success: function(response) {
+                            if (response.status === 'success') {
+                                $('#nom_<?= $formulaire['ID_CAPSULERUBRIQUE'] ?>').text(newName);
+
+                                $('#editModal_<?= $formulaire['ID_CAPSULERUBRIQUE'] ?>').modal('hide');
+                            } else {
+                                alert('Une erreur est survenue lors de la mise à jour : ' + response.message);
+                            }
+                        },
+                        error: function() {
+                            alert('Une erreur est survenue lors de la requête.');
+                        }
+                    });
+                } else {
+                    alert('Le nom ne peut pas être vide.');
+                }
+            });
+        <?php endforeach; ?>
+    });
+</script>
