--- a/application/views/scripts/piece-jointe/display.phtml
+++ b/application/views/scripts/piece-jointe/display.phtml
@@ -2,6 +2,15 @@
     <tr>
         <!-- Lien de la pièce jointe -->
         <td>
+            <?php if (
+                $this->isPlatau
+                && $pj['IS_NEW']
+            ): ?>
+                <div class="label label-success mb-2">
+                    Nouveau !
+                </div>
+                <br />
+            <?php endif ?>
             <a
                 class="file <?php echo substr(strtolower($pj['EXTENSION_PIECEJOINTE']), 1, 3) ?>"
                 href='<?php echo $this->url(array('controller' => 'piece-jointe', 'action' => 'get', 'id' => $this->id, 'idpj' => $pj['ID_PIECEJOINTE'], 'type' => $this->type)) ?>'
@@ -15,7 +24,7 @@
                 && $pj['ID_PLATAU']
             ): ?>
                 <br />
-                <div class="label label-info">
+                <div class="label label-info mt-2">
                     <?= $pj['ID_PLATAU'] ?>
                 </div>
             <?php endif ?>
