--- a/application/views/scripts/piece-jointe/display.phtml
+++ b/application/views/scripts/piece-jointe/display.phtml
@@ -6,7 +6,7 @@
                 $this->isPlatau
                 && $pj['IS_NEW']
             ): ?>
-                <div class="label label-success mb-2">
+                <div class="label label-important mb-2">
                     Nouveau !
                 </div>
                 <br />
